// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should render with all props 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  bottom: 2px;
  right: 15px;
}

.css-1,
[data-css-1] {
  pointer-events: none;
}

.css-2,
[data-css-2] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-left: 40px;
  padding-top: 10px;
  padding-right: 50px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-2:required,
[data-css-2]:required {
  box-shadow: none;
}

.css-2:-webkit-autofill ~ .label,
[data-css-2]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-2:-webkit-autofill ~ .checkmark,
[data-css-2]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-2:-webkit-autofill,
[data-css-2]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-2::-ms-clear,
[data-css-2]::-ms-clear {
  display: none;
}

.css-6,
[data-css-6] {
  position: absolute;
  left: 40px;
  font-size: 10px;
  opacity: 0;
  transition: all .225s ease-out;
  -webkit-transition: all .225s ease-out;
  -moz-transition: all .225s ease-out;
}

.css-7,
[data-css-7] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-8,
[data-css-8] {
  position: relative;
}

.css-9,
[data-css-9] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-10,
[data-css-10] {
  position: absolute;
  top: 0;
  left: 15px;
  bottom: 0;
}

.css-11,
[data-css-11] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  flex: 0 0 auto;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -webkit-flex: 0 0 auto;
}

.css-12,
[data-css-12] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 10px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

.css-13,
[data-css-13] {
  display: block;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #626262;
}

<div
  data-css-8=""
  data-css-9=""
  style={
    Object {
      "width": "100%",
    }
  }
>
  <div
    data-css-1=""
    data-css-11=""
    data-css-10=""
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      data-css-9=""
      style={
        Object {
          "fill": false,
          "height": 16,
          "stroke": "#626262",
          "width": 16,
        }
      }
    />
  </div>
  <input
    aria-required={true}
    data-css-2=""
    defaultValue="defaultValue"
    maxLength={1}
    minLength={1}
    name="name"
    onChange={[Function]}
    pattern={[Function]}
    required={true}
    type="tel"
    value="value"
  />
  <div
    className="label"
    data-css-6=""
    data-css-9=""
    style={
      Object {
        "opacity": 1,
        "top": 8,
      }
    }
  >
    <div
      data-css-9=""
      data-css-12=""
    >
      label
       
      *
    </div>
  </div>
  <div
    className="checkmark"
    data-css-7=""
    data-css-9=""
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      data-css-9=""
      style={
        Object {
          "fill": "lightGrey",
          "height": 16,
          "stroke": false,
          "width": 16,
        }
      }
    />
  </div>
  <div
    data-css-9=""
    data-css-0=""
  >
    <div
      data-css-13=""
      data-css-9=""
    >
      5
      /
      1
    </div>
  </div>
</div>
`;

exports[`Input component should render with required props only 1`] = `
.css-0,
[data-css-0] {
  position: absolute;
  top: 16px;
  right: 15px;
  pointer-events: none;
  transition: opacity .225s;
  opacity: 0;
  -webkit-transition: opacity .225s;
  -moz-transition: opacity .225s;
}

.css-1,
[data-css-1] {
  position: relative;
}

.css-2,
[data-css-2] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-3,
[data-css-3] {
  display: inline;
  font-family: "Open Sans", Helvetica, Arial, sans-serif;
  font-size: 13px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  padding: 0 15px;
  padding-top: 0;
  padding-right: 15px;
  transition: padding-top .225s ease-out;
  border: 0;
  -webkit-transition: padding-top .225s ease-out;
  -moz-transition: padding-top .225s ease-out;
}

.css-3:required,
[data-css-3]:required {
  box-shadow: none;
}

.css-3:-webkit-autofill ~ .label,
[data-css-3]:-webkit-autofill ~ .label {
  opacity: 1 !important;
  top: 8px !important;
}

.css-3:-webkit-autofill ~ .checkmark,
[data-css-3]:-webkit-autofill ~ .checkmark {
  opacity: 1 !important;
  top: 8px;
}

.css-3:-webkit-autofill,
[data-css-3]:-webkit-autofill {
  padding-top: 10px !important;
}

.css-3::-ms-clear,
[data-css-3]::-ms-clear {
  display: none;
}

<div
  data-css-1=""
  data-css-2=""
  style={
    Object {
      "width": "100%",
    }
  }
>
  <input
    aria-required={false}
    data-css-3=""
    name="name"
    onChange={[Function]}
    required={false}
    type="text"
  />
  <div
    className="checkmark"
    data-css-0=""
    data-css-2=""
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      data-css-2=""
      style={
        Object {
          "fill": "lightGrey",
          "height": 16,
          "stroke": false,
          "width": 16,
        }
      }
    />
  </div>
</div>
`;
